# flugfeld

./: .gitignore  README.md  airport_filter.json  download.sh  edit.py  example.json  flugfeld.csv  openaip.py  pre-commit  pyproject.toml  test.py
.github/: dependabot.yml
.github/workflows/: test.yml  upload_to_s3.yml
data/: flugfeld.csv
flugfeld/src/: arrange.py  csv.py  download.py  geojson.py  id.py  main.py  name.py  region.py  reign.py
flugfeld/tests/: test_region.py  test_weglide_id.py
geo/: continents.json  countries.json  multi_regions.json  sectors.json
src/: api_types.py  arrange.py  csv.py  download.py  edit.py  geojson.py  id.py  main.py  name.py  region.py  reign.py  types.py
tests/: test_regions.py
