[tool.poetry]
name = "flugfeld"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10"
numpy = "^1.20.2"
geojson = "^2.5.0"
timezonefinder = {version = "^5.2.0", extras = ["numba"]}
scipy = "^1.6.2"
pytest = "^6.2.3"
python-dotenv = "^0.21.0"

[tool.poetry.dev-dependencies]
black = {version = "^20.8b1", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
